--- a/app/templates/includes/components/steps-work-section.twig
+++ b/app/templates/includes/components/steps-work-section.twig
@@ -1,14 +1,14 @@
 	<!-- begin steps-work-section -->
 	<section class="steps-work-section">
 		<div class="uk-container">
-			<h2 class="title-h2 uk-text-center">Как у нас всё устроено</h2>
-			<div class="steps-work-section__inner">
-				<ul class="steps-list">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Как у нас всё устроено</h2>
+			<div class="steps-work-section__inner" uk-scrollspy="cls: slide-up">
+				<ul class="steps-list" uk-scrollspy="target: .round-item; cls: slide-right; delay: 300">
 					<li>
 						<div class="round-item">
 							<div class="round-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-11"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-10.svg" alt="" uk-img>
 							</div>
@@ -22,7 +22,7 @@
 						<div class="round-item">
 							<div class="round-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-6"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-11.svg" alt="" uk-img>
 							</div>
@@ -48,7 +48,7 @@
 						<div class="round-item">
 							<div class="round-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-4"></use>
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-9"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-13.svg" alt="" uk-img>
 							</div>
@@ -62,7 +62,7 @@
 						<div class="round-item">
 							<div class="round-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-5"></use>
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-12"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-14.svg" alt="" uk-img>
 							</div>
