--- a/app/sass/content/typebox-section.scss
+++ b/app/sass/content/typebox-section.scss
@@ -65,6 +65,10 @@
 				justify-content: center;
 				align-items: center;
 				transform: translate(-50%, -50%);
+				img {
+					max-width: 100%;
+					max-height: 100%;
+				}
 			}
 		}
 		&__text {
